implement allNegative and Curated,Computed and LargeScale

--- a/src/main/webapp/WEB-INF/velocity/turtle/interaction.ttl.vm
+++ b/src/main/webapp/WEB-INF/velocity/turtle/interaction.ttl.vm
@@ -28,7 +28,7 @@ evidence:$interaction.evidenceId
   :reference [
     a :Xref;
     :provenance db:$StringUtils.slug($interaction.evidenceXrefDB) ;
-    :accession "$interaction.evidenceXrefAC"^^xsd::string ;
+    :accession "$interaction.evidenceXrefAC"^^xsd:string ;
   ];
   :numberOfExperiments $interaction.numberOfExperiments; 
   .
