--- a/src/main/webapp/WEB-INF/velocity/turtle/schema-evidence-list.ttl.vm
+++ b/src/main/webapp/WEB-INF/velocity/turtle/schema-evidence-list.ttl.vm
@@ -10,7 +10,20 @@
       rdf:type owl:Class ;
       rdfs:subClassOf owl:Thing;
       .
-                
+
+:CuratedEvidence
+      rdf:type owl:Class ;
+      :notIn :ComputedEvidence;
+      rdfs:subClassOf :Evidence;
+      .
+
+:ComputedEvidence
+      rdf:type owl:Class ;
+      :notIn :CuratedEvidence;
+      rdfs:subClassOf :Evidence;
+      .
+      
+      
 :evidence
       rdf:type owl:ObjectProperty ;
       rdfs:domain :Annotation ;
