--- a/src/main/webapp/WEB-INF/velocity/turtle/isoform-interaction-list.ttl.vm
+++ b/src/main/webapp/WEB-INF/velocity/turtle/isoform-interaction-list.ttl.vm
@@ -55,7 +55,7 @@ evidence:$interaction.evidenceId
   :reference [
     a :Xref;
     :provenance db:$StringUtils.slug($interaction.evidenceXrefDB) ;
-    :accession "$interaction.evidenceXrefAC"^^xsd::string ;
+    :accession "$interaction.evidenceXrefAC"^^xsd:string ;
   ];
   :numberOfExperiments $interaction.numberOfExperiments; 
   .
