--- a/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
+++ b/src/main/webapp/WEB-INF/velocity/turtle/publication.ttl.vm
@@ -4,7 +4,7 @@
 #end
 publication:$publication.getMD5() a :Publication;
 #if($publication.getIsLargeScale())
-    rdf:type :LargeScapePublication;
+    rdf:type :LargeScalePublication;
 #end
 #set($UNESCAPED_CDATA = $publication.title)
     :title """$StringUtils.clean($UNESCAPED_CDATA)"""^^xsd:string;
