renaming of interaction

--- a/src/main/webapp/WEB-INF/velocity/turtle/interaction.ttl.vm
+++ b/src/main/webapp/WEB-INF/velocity/turtle/interaction.ttl.vm
@@ -28,8 +28,8 @@ evidence:$interaction.evidenceId
   :reference [
     a :Xref;
     :provenance db:$StringUtils.slug($interaction.evidenceXrefDB) ;
-    :accession "$interaction.evidenceXrefAC"^^xsd::string ;
+    :accession "$interaction.evidenceXrefAC"^^xsd:string ;
   ];
-  :numberOfExperiments $interaction.numberOfExperiments; 
+  :numberOfExperiments "$interaction.numberOfExperiments"^^xsd:integer; 
   .
    
