added the unique name of the entry annotation in isoform propagated annotations (useful for some stats)

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
@@ -1,4 +1,5 @@
 annotation:$annotation-uri a :$annotation-type;
+  :entryAnnotationId "$annotation.getUniqueName()"^^xsd:string;
   :quality :$annotation.getQualityQualifier();
   :specificity :$annotation.getSpecificityForIsoform($isoform-name);
 #if($annotation.getCvTermName())
