added generic way to describe the API model of an annotation property and applied it to :PdbMapping "resolution" and "method" properties

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
@@ -10,8 +10,14 @@ annotation:$annotation-uri a :$annotation-type;
   rdfs:comment "$StringUtils.clean($annotation.getDescription())"^^xsd:string;
 #end
 #end
+#foreach($prop in $annotation.getProperties())
+#set($pmodel=$annotation.getPropertyApiModel($prop)) 
+#if($pmodel)
+  :$pmodel.getApiName() "$prop.getValue()"^^xsd:$pmodel.getRdfDataType();
+#end
+#end
 #if($annotation.getVariant())
-#set($variant=$annotation.getVariant())  
+#set($variant=$annotation.getVariant()) 
   :original "$variant.getOriginal()"^^xsd:string;
   :variation "$variant.getVariant()"^^xsd:string;
 #if($variant.getDescription())
