added publications as entry references in t/l

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry-references.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry-references.ttl.vm
@@ -28,3 +28,11 @@ entry:$entry.uniqueName :reference [
 
 #end
 
+# - - - - - - - -
+# Publications
+# - - - - - - - -
+
+#foreach($pub in $entry.publications)
+entry:$entry.uniqueName :reference publication:$pub.getMD5() .
+#end
+
