unescaped :accession and url values (bgee makes it necessary)

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry-references.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry-references.ttl.vm
@@ -4,9 +4,10 @@
 # - - - - - - - -
 
 #foreach($xref in $entry.xrefs)
+#set($UNESCAPED_CDATA = $xref.accession)
 entry:$entry.uniqueName :reference [
   a :Xref ;
-  :accession "$xref.accession"^^xsd:string ;
+  :accession "$UNESCAPED_CDATA"^^xsd:string ;
   :provenance db:$StringUtils.slug($xref.databaseName) ; 
   ]
 .
