--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-evidence.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-evidence.ttl.vm
@@ -8,12 +8,6 @@ annotation:$annotation-uri :withEvidence evidence:$evidence-uri.
 ## decribe the evidence here
 evidence:$evidence-uri 
   rdf:type :Evidence ;
-#if($evidence.getAssignmentMethod() &&  $evidence.getAssignmentMethod().equals("curated"))
-  rdf:type :CuratedEvidence ;
-#end  
-#if($evidence.getAssignmentMethod() && $evidence.getAssignmentMethod().equals("computed"))
-  rdf:type :ComputedEvidence ;
-#end  
   :code :$evidence.getQualifierType();
 ## negative is no more needed
 ##  :negative "$evidence.isNegativeEvidence($isoform-name)"^^xsd:boolean;
@@ -23,21 +17,14 @@ evidence:$evidence-uri
 ##  :$evidence.getResourceType() publication:$evidence.getResourceAccession()
 ## resource => database (xref:P06213,...) , Publication (publi id=getResourceId())
 #if($evidence.getResourceType().equals("publication"))
+  :reference publication:$evidence.getPublicationMD5();
   :publication publication:$evidence.getPublicationMD5();
 #end
 #if($evidence.getResourceType().equals("database"))
   :fromXref db:$StringUtils.slug($evidence.getResourceDb());
+  :reference xref:$evidence.getResourceId();
+  :xref xref:$evidence.getResourceId();
 #end
-
-#if($evidence.getResourceType().equals("database"))
-#set($UNESCAPED_CDATA = $evidence.resourceAccession)
-  :reference [
-    a :Xref ;
-    :accession "$UNESCAPED_CDATA"^^xsd:string;
-    :provenance db:$StringUtils.slug($evidence.resourceDb); 
-    ] ;
-#end
-
 #if($evidence.getAssignedBy())
   :assignedBy source:$StringUtils.slug($evidence.getAssignedBy());
 #end
@@ -69,4 +56,13 @@ evidence:$evidence-uri
   :negativeIsoformSpecificity "$evidence.getNegativeIsoformSpecificity()"^^xsd:string;
 #end
   .
+#if($evidence.getResourceType().equals("database"))
+#set($UNESCAPED_CDATA = $evidence.resourceAccession)
+
+xref:$evidence.getResourceId()
+    rdf:type :Xref ;
+    :accession "$UNESCAPED_CDATA"^^xsd:string;
+    :provenance db:$StringUtils.slug($evidence.resourceDb); 
+  .
+#end
 
