--- a/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/entry.ttl.vm
@@ -2,7 +2,7 @@
 # 
 entry:$entry.getUniqueName() a :Entry;
   skos:exactMatch uniprot:$entry.getUniprotName();
-  :swissprotPage unipage:$entry.getUniprotName();
+##  :swissprotPage unipage:$entry.getUniprotName();
 ## Links to isoforms
 #foreach($isoform in $entry.getIsoforms())
 #set($isoform-name =  $isoform.getUniqueName())
