--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-interaction-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-interaction-list.ttl.vm
@@ -24,13 +24,13 @@ interaction:$iso-interaction-iri a :BinaryInteraction;
   :evidence evidence:$interaction.evidenceId;
 #if($interactant.isNextprot())
 #if($interactant.isIsoform())
-  :with isoform:$interactant.getNextprotAccession();
+  :interactant isoform:$interactant.getNextprotAccession();
 #else
-  :with entry:$interactant.getNextprotAccession();
+  :interactant entry:$interactant.getNextprotAccession();
 #end
 ## otherwise interactant is not an entry nor an isoform described in nextprot, it is an xref
 #else
-  :with [
+  :interactant [
     rdf:type :Xref ;
     :provenance db:$StringUtils.slug($interactant.database);
     :accession "$interactant.accession"^^xsd:string ;
