--- a/web/src/main/webapp/WEB-INF/velocity/annotation-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/annotation-list.xml.vm
@@ -1,6 +1,6 @@
 <annotation-list>
 #foreach($category in $entry.getAnnotationCategories())
-<annotation category='$category'>
+<annotation category='$StringUtils.decamelizeAndReplaceByHyphen($category)'>
 	#foreach($annotation in $entry.getAnnotationsByCategory($category))
 		#parse("annotation.xml.vm")
 	#end
