adapted sql and templates to use the cv_api_name column of cv_term_categories (ontologies) rather than cv_name which is not camel cased

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/term.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/term.ttl.vm
@@ -1,5 +1,5 @@
 ## repeat annotation for each isoform
-term:$StringUtils.slug($terminology.getAccession()) a :$StringUtils.toCamelCase($terminology.getOntology(), false);
+term:$StringUtils.slug($terminology.getAccession()) a :$terminology.getOntology();
   rdfs:label "$StringUtils.clean($terminology.getName())"^^xsd:string;
 ##  rdfs:comment "$StringUtils.clean($terminology.getDescription())"^^xsd:string;
 #if($terminology.getAncestorAccession())
