--- a/web/src/main/webapp/WEB-INF/velocity/turtle/schema-ontology-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/schema-ontology-list.ttl.vm
@@ -42,12 +42,12 @@ term:ECO_0000104 rdfs:subClassOf :EST .
 
 #foreach($ontology in $ontologyList)
   
-:$StringUtils.toCamelCase($ontology.getOntology(), false)
+:$ontology.getOntology()
   rdf:type owl:Class ;
   rdfs:subClassOf :Term;
   rdfs:label "$ontology.getName()"^^xsd:string;
   rdfs:comment "$ontology.getDescription()"^^xsd:string;
-  rdfs:seeAlso "http://www.nextprot.org/manual/$StringUtils.toCamelCase($ontology.getOntology(), false)"^^xsd:anyURI;
+  rdfs:seeAlso "http://www.nextprot.org/manual/$ontology.getOntology()"^^xsd:anyURI;
   .      
 #end
 
