--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation.ttl.vm
@@ -3,7 +3,7 @@ annotation:$annotation-uri a :$annotation-type;
   :quality :$annotation.getQualityQualifier();
   :isoformSpecificity :$annotation.getSpecificityForIsoform($isoform-name);
 #if($annotation.getCvTermName())
-  :term term:$StringUtils.slug($annotation.getCvTermAccessionCode());
+  :term cv:$StringUtils.slug($annotation.getCvTermAccessionCode());
 #end
 #if($annotation.getDescription())
 #if(! $annotation.getVariant())
@@ -27,7 +27,7 @@ annotation:$annotation-uri a :$annotation-type;
 #end    
 #if($variant.getDiseaseTerms())
 #foreach($term in $variant.getDiseaseTerms())
-  :disease term:$term;
+  :disease cv:$term;
 #end
 #end    
 #end
