adapted predicate names for expression: - :expression as parent of :developmentalStageInfo, :expressionProfile, :expressionInfo - :undetectedExpression links an isoform to an annotation having only negative/undetected expression level in all evidences - :detectedExpression links an isoform to an annotation having at least one evidence showing positive, low, medium, high expression level uncommented evidence :negative xxx:boolean triples

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-evidence.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/isoform-annotation-evidence.ttl.vm
@@ -10,7 +10,7 @@ evidence:$evidence-uri
   rdf:type :Evidence ;
   :code :$evidence.getQualifierType();
 ## negative is no more needed
-##  :negative "$evidence.isNegativeEvidence($isoform-name)"^^xsd:boolean;
+  :negative "$evidence.isNegativeEvidence($isoform-name)"^^xsd:boolean;
 #if($evidence.getQualityQualifier())
   :quality :$evidence.getQualityQualifier();
 #end  
